created AJAX request

--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
   <head>
     <script src="lib/assert.js"></script>
-    <script src="src/news.js"></script>
+    <script src="./index.js"></script>
     <script src="spec/newsSpec.js"></script>
     <title>Headlines page</title>
   </head>
   <body>
     <div id="app"><h1> Riker's Rag </h1></div>
+    <br>
+    <button id="request"> See the news headlines</button>
+    <div id="news"></div>
     <br>
     <div id="newsitem"><h2>Headline 1</h2></div>
     <br>
